tests/scan/fixtures/validation/negative/clean_go_clean-health-endpoint/clean-health-endpoint.go
// Package clean-health-endpoint is a clean Go module.
package clean-health-endpoint

func Hello() string { return "hello" }
